Create scaffold for parser and lexer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(lisp_parser)
 
 set(CMAKE_CXX_STANDARD 11)
 
-
 add_executable(lisp_parser main.cpp)
+
+target_include_directories(lisp_parser PUBLIC include)
 add_subdirectory(src)
