--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
-add_subdirectory(util)
+add_subdirectory(common)
 
 target_sources(lisp_parser PUBLIC parser.h parser.cpp)
 target_include_directories(lisp_parser PUBLIC .)
 
-target_link_libraries(lisp_parser boost_program_options)
+target_sources(lisp_parser_test PUBLIC parser.h parser.cpp)
+target_include_directories(lisp_parser_test PUBLIC .)
+
