--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.29)
 project(lisp_parser)
 
 set(CMAKE_CXX_STANDARD 14)
-add_compile_options(-Wall -Wextra)
+add_compile_options(-Wall -Wextra -fdiagnostics-all-candidates)
 
 add_executable(lisp_parser main.cpp)
 target_link_libraries(lisp_parser boost_program_options)
